refactor: day 10 (class and tests)